maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:10: error: not found: value verfierMurGauche
    verfierMurGauche() match{
    ^